--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#--- apify-sample start
+apify_storage
+.DS_Store
+#--- apify-sample end
 # Logs
 logs
 *.log
@@ -69,7 +73,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+#.env
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
